# photonic-sim

./: .gitignore  MIGRATION_NOTES.md  README.md  pyproject.toml
design/: mrr_simulation_platform.md
docs/: AGENT_CONTROL_SPEC.md  generate_figures.py
examples/: plot_mrr_visual_overview.py  verify_runtime.py
experiments/: README.md  run_agent_retuning_baseline.py  run_belief_recovery_probe.py  run_calibration_bootstrap.py  run_crosstalk_scan.py  run_drift_observation_dataset.py  run_observation_chain_sweep.py  run_step_response.py  visualize_experiments.py
photonic_sim/: __init__.py  agent.py  calibration.py  config.py  controller.py  execution.py  inference.py  instruments.py  physics.py  plant.py  runtime.py  types.py
photonic_sim/components/: __init__.py  base.py  fiber.py  modulator.py  mrr_filter.py  photodetector.py  signal.py
photonic_sim/core/: __init__.py  mrr.py  mrr_bank.py  physics.py  wavelength_grid.py
photonic_sim/link/: __init__.py  optical_link.py
tests/: test_agent.py  test_calibration.py  test_inference.py  test_mrr.py  test_runtime.py
