[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-sim"
version = "0.2.0"
description = "Research-grade runtime-oriented simulation toolkit for WDM MRR retuning experiments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["photonic_sim"]
